--- a/DreamFactory.AddressBok/Views/Home/Index.cshtml
+++ b/DreamFactory.AddressBok/Views/Home/Index.cshtml
@@ -3,29 +3,23 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Address book demo</h1>
+    <p class="lead">DreamFactory address book demo is a ASP.NET MVC application utilizing DreamFactory API for persistance, security and scalability.</p>
+    <p><a href="@Url.Action("Register", "Account")" class="btn btn-primary btn-lg">Register now &raquo;</a></p>
+
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-6">
+        <h2>What is DreamFactory?</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            DreamFactory is a free, open source REST API backend for mobile, web, and IoT applications. It provides RESTful web services for any data source so you can start front-end development with robust REST APIs on day one.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://www.dreamfactory.com/">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2>Why DreamFactory?</h2>
+        <p>DreamFactory provides pre-built connectors to SQL, NoSQL, file storage systems, and web services. With a few clicks, you instantly get a comprehensive palette of secure, reusable, customizable REST APIs and live API documentation.</p>
+        <p><a class="btn btn-default" href="http://www.dreamfactory.com/user/register">Try now &raquo;</a></p>
     </div>
 </div>
