--- a/DreamFactory.AddressBok/Views/Shared/_Layout.cshtml
+++ b/DreamFactory.AddressBok/Views/Shared/_Layout.cshtml
@@ -16,14 +16,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="/">
+                    <img src="~/Images/DreamFactory-logo-inverse-horiz.png" width="200px" style="margin:10px 10px 0 10px" />
+                </a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                @if (Request.IsAuthenticated)
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Contact groups", "List", "Group")</li>
+                    </ul>
+                }
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
