--- a/DreamFactory.AddressBok/Views/Shared/_LoginPartial.cshtml
+++ b/DreamFactory.AddressBok/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.Name + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + User.Identity.Name + "!", "ChangePassword", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
