Implemented SignIn and SignOut.

--- a/DreamFactory.AddressBok/Views/Manage/ChangePassword.cshtml
+++ b/DreamFactory.AddressBok/Views/Manage/ChangePassword.cshtml
@@ -4,6 +4,8 @@
 }
 
 <h2>@ViewBag.Title.</h2>
+<p class="text-success">@ViewBag.StatusMessage</p>
+
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
