--- a/DreamFactory.AddressBok/Views/Contact/List.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/List.cshtml
@@ -1,5 +1,5 @@
-﻿@using DreamFactory.AddressBook.Models.Contact
-@model IEnumerable<DreamFactory.AddressBook.Models.Contact.Contact>
+﻿@using DreamFactory.AddressBook.Models.Contacts
+@model IEnumerable<DreamFactory.AddressBook.Models.Contacts.Contact>
 
 @{
     ViewBag.Title = "Contacts";
