--- a/DreamFactory.AddressBok/Views/ContactGroup/List.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactGroup/List.cshtml
@@ -1,5 +1,5 @@
-﻿@using DreamFactory.AddressBook.Models.ContactGroup
-@model IEnumerable<DreamFactory.AddressBook.Models.ContactGroup.ContactGroup>
+﻿@using DreamFactory.AddressBook.Models.Contacts
+@model IEnumerable<DreamFactory.AddressBook.Models.Contacts.ContactGroup>
 
 @{
     ViewBag.Title = "Contact groups";
