--- a/DreamFactory.AddressBok/Views/Contact/List.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/List.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<DreamFactory.AddressBook.Models.Contacts.Contact>
 
 @{
-    ViewBag.Title = "Contacts";
+    ViewBag.Title = string.IsNullOrEmpty(ViewBag.GroupName) ? "Contacts in all groups" : "Contacts in '" + ViewBag.GroupName + "' group";
 }
 
 <h2>@ViewBag.Title</h2>
@@ -17,20 +17,24 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (Contact group in Model)
+        @foreach (Contact contact in Model)
         {
             <tr>
-                <td>@group.Id</td>
-                <td>@group.FirstName</td>
+                <td>@contact.Id</td>
+                <td>@contact.FirstName @contact.LastName</td>
                 <td>
-                    <a type="button" class="btn btn-default btn-sm" aria-label="Contacts" href="@Url.Action("Details", new { GroupId = group.Id })">
-                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Details
+                    <a type="button" class="btn btn-default btn-sm" aria-label="Details" href="@Url.Action("Details", new { Id = contact.Id })">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span> View
                     </a>
-                    <a type="button" class="btn btn-default btn-sm" aria-label="Edit" href="@Url.Action("Edit", new { Id = group.Id })">
+                    <a type="button" class="btn btn-default btn-sm" aria-label="Edit" href="@Url.Action("Edit", new { Id = contact.Id })">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
                     </a>
                 </td>
             </tr>
+        }
+        @if (!Model.Any())
+        {
+            <tr><td colspan="3" style="text-align: center">No records found.</td></tr>
         }
     </tbody>
 </table>
