--- a/DreamFactory.AddressBok/Views/Contact/Details.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/Details.cshtml
@@ -1,5 +1,47 @@
-﻿@{
-    ViewBag.Title = "Contact details";
+﻿@model DreamFactory.AddressBook.Models.Contact.Contact
+
+@{
+    ViewBag.Title = "Contact details for " + string.Format("{0} {1}", Model.FirstName, Model.LastName);
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
+<br />
+<div class="row">
+    <div class="col-md-8">
+        <section id="contactDetails">
+            @using (Html.BeginForm("Create", "Contact", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                <div class="form-group">
+                    @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        <p class="form-control-static">@Html.DisplayTextFor(x => x.FirstName)</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        <p class="form-control-static">@Html.DisplayTextFor(x => x.LastName)</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Twitter, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        <p class="form-control-static">@Html.DisplayTextFor(x => x.Twitter)</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Skype, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        <p class="form-control-static">@Html.DisplayTextFor(x => x.Skype)</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Notes, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        <p class="form-control-static">@Html.DisplayTextFor(x => x.Notes)</p>
+                    </div>
+                </div>
+            }
+        </section>
+    </div>
+</div>
