--- a/DreamFactory.AddressBok/Views/Contact/List.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/List.cshtml
@@ -1,11 +1,14 @@
-﻿@using DreamFactory.AddressBook.Models.Contacts
-@model IEnumerable<DreamFactory.AddressBook.Models.Contacts.Contact>
+﻿@using DreamFactory.AddressBook.Extensions
+@using DreamFactory.AddressBook.Models.Contact
+@model IEnumerable<DreamFactory.AddressBook.Models.Contact.Contact>
 
 @{
     ViewBag.Title = string.IsNullOrEmpty(ViewBag.GroupName) ? "Contacts in all groups" : "Contacts in '" + ViewBag.GroupName + "' group";
 }
 
 <h2>@ViewBag.Title</h2>
+<a href="@Url.Action("Create", "Contact", Request.QueryString.ToRouteValues())" style="display: block;">Add new contact</a>
+<br />
 
 
 <table class="table table-hover table-striped">
@@ -23,10 +26,10 @@
                 <td>@contact.Id</td>
                 <td>@contact.FirstName @contact.LastName</td>
                 <td>
-                    <a type="button" class="btn btn-default btn-sm" aria-label="Details" href="@Url.Action("Details", new { Id = contact.Id })">
+                    <a type="button" class="btn btn-default btn-sm" aria-label="Details" href="@Url.Action("Details", Request.QueryString.ToRouteValues(new { Id = contact.Id }))">
                         <span class="glyphicon glyphicon-search" aria-hidden="true"></span> View
                     </a>
-                    <a type="button" class="btn btn-default btn-sm" aria-label="Edit" href="@Url.Action("Edit", new { Id = contact.Id })">
+                    <a type="button" class="btn btn-default btn-sm" aria-label="Edit" href="@Url.Action("Edit", Request.QueryString.ToRouteValues(new { Id = contact.Id }))">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
                     </a>
                 </td>
