--- a/DreamFactory.AddressBok/Views/ContactGroup/List.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactGroup/List.cshtml
@@ -1,12 +1,13 @@
-﻿@using DreamFactory.AddressBook.Models.Contacts
-@model IEnumerable<DreamFactory.AddressBook.Models.Contacts.ContactGroup>
+﻿@using DreamFactory.AddressBook.Extensions
+@using DreamFactory.AddressBook.Models.Contact
+@model IEnumerable<DreamFactory.AddressBook.Models.Contact.ContactGroup>
 
 @{
     ViewBag.Title = "Contact groups";
 }
 
 <h2>@ViewBag.Title</h2>
-<a href="@Url.Action("Create")" style="display: block;">Add new contact group</a>
+<a href="@Url.Action("Create", Request.QueryString.ToRouteValues())" style="display: block;">Add new contact group</a>
 <br/>
 
 <table class="table table-hover table-striped">
@@ -24,10 +25,10 @@
             <td>@group.Id</td>
             <td>@group.Name</td>
             <td>
-                <a type="button" class="btn btn-default btn-sm" aria-label="Contacts" href="@Url.Action("List", "Contact", new { GroupId = group.Id })">
+                <a type="button" class="btn btn-default btn-sm" aria-label="Contacts" href="@Url.Action("List", "Contact", Request.QueryString.ToRouteValues(new { GroupId = group.Id }))">
                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Contacts
                 </a>
-                <a type="button" class="btn btn-default btn-sm" aria-label="Edit" href="@Url.Action("Edit", new { Id = group.Id })">
+                <a type="button" class="btn btn-default btn-sm" aria-label="Edit" href="@Url.Action("Edit", Request.QueryString.ToRouteValues(new { Id = group.Id }))">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
                 </a>
             </td>
