--- a/DreamFactory.AddressBok/Views/Shared/_Layout.cshtml
+++ b/DreamFactory.AddressBok/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - DreamFactory ASP.NET demo application</p>
         </footer>
     </div>
 
