--- a/DreamFactory.AddressBok/Views/ContactGroup/Edit.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactGroup/Edit.cshtml
@@ -2,7 +2,7 @@
 @model DreamFactory.AddressBook.Models.Contact.ContactGroup
 
 @{
-    ViewBag.Title = "Edit contact group: " + Model.Name;
+    ViewBag.Title = "Edit contact group " + Model.Name;
 }
 
 <h2>@ViewBag.Title</h2>
