Implemented adding and editing contacts in a group.

--- a/DreamFactory.AddressBok/Views/Account/Login.cshtml
+++ b/DreamFactory.AddressBok/Views/Account/Login.cshtml
@@ -32,7 +32,7 @@
                         <div class="checkbox">
                             <label>
                                 @Html.CheckBoxFor(m => m.RememberMe)
-                                @Html.NameFor(m => m.RememberMe)
+                                 Remember me
                             </label>
                         </div>
                     </div>
