--- a/DreamFactory.AddressBok/Views/ContactInfo/Create.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactInfo/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DreamFactory.AddressBook.Models.Contact.ContactInfoViewModel
+﻿@model DreamFactory.AddressBook.Models.ContactInfoViewModel
 
 @{
     ViewBag.Title = "Add contact info for " + ViewBag.ContactName;
