--- a/DreamFactory.AddressBok/Views/ContactInfo/Edit.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactInfo/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DreamFactory.AddressBook.Models.Contact.ContactInfoViewModel
+﻿@model DreamFactory.AddressBook.Models.ContactInfoViewModel
 
 @{
     ViewBag.Title = "Edit '" + Model.ContactInfo.InfoType + "' contact info for " + ViewBag.ContactName;
@@ -73,7 +73,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <input type="submit" value="Save" class="btn btn-primary"/>
                         <a href="@Model.ReturnUrl" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
