--- a/DreamFactory.AddressBok/Views/Contact/Create.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DreamFactory.AddressBook.Extensions
-@model DreamFactory.AddressBook.Models.Contact.ContactViewModel
+@model DreamFactory.AddressBook.Models.ContactViewModel
 
 @{
     ViewBag.Title = "Add new contact";
@@ -51,7 +51,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <input type="submit" value="Save" class="btn btn-primary"/>
                         <a href="@Url.Action("List", "Contact", Request.QueryString.ToRouteValues())" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
