--- a/DreamFactory.AddressBok/Views/ContactInfo/Details.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactInfo/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DreamFactory.AddressBook.Models.Contact.ContactInfo
+﻿@model DreamFactory.AddressBook.Models.Entities.ContactInfo
 
 <h3>@Html.DisplayTextFor(x => x.InfoType)</h3>
 <div class="well">
