--- a/DreamFactory.AddressBok/Views/Contact/Create.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/Create.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="createForm">
-            @using (Html.BeginForm("Create", "Contact", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Create", "Contact", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data", autocomplete="off" }))
             {
                 @Html.HiddenFor(x => x.GroupId)
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -26,6 +26,13 @@
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Contact.LastName, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Contact.LastName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.ImageUpload, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.ImageUpload, new { type = "file", @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.ImageUpload, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
