--- a/DreamFactory.AddressBok/Views/Contact/Edit.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DreamFactory.AddressBook.Extensions
-@using DreamFactory.AddressBook.Models.Contact
+@using DreamFactory.AddressBook.Models.Entities
 @model DreamFactory.AddressBook.Models.ContactViewModel
 
 @{
@@ -7,12 +7,14 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<a href="@Url.Action("Create", "ContactInfo", Request.QueryString.ToRouteValues(new { ContactId = Url.RequestContext.RouteData.Values["id"], ReturnUrl = Request.Url }))" style="display: block;">Add contact info</a>
+<div>
+    <a href="@Url.Action("Create", "ContactInfo", Request.QueryString.ToRouteValues(new { ContactId = Url.RequestContext.RouteData.Values["id"], ReturnUrl = Request.Url }))">Add contact info</a>
+</div>
 <br />
 <div class="row">
     <div class="col-md-8">
         <section id="editForm">
-            @using (Html.BeginForm("Edit", "Contact", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Edit", "Contact", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data", autocomplete = "off" }))
             {
                 @Html.HiddenFor(x => x.Contact.Id)
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -28,6 +30,13 @@
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Contact.LastName, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Contact.LastName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Label("Change image", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.ImageUpload, new { type = "file", @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.ImageUpload, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
