--- a/DreamFactory.AddressBok/Views/ContactGroup/Create.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactGroup/Create.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="createForm">
-            @using (Html.BeginForm("Create", "ContactGroup", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Create", "ContactGroup", FormMethod.Post, new { @class = "form-horizontal", role = "form", autocomplete = "off" }))
             {
                 @Html.HiddenFor(x => x.ContactGroup.Id)
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
