Refactored queries to utilize related parameter.

--- a/DreamFactory.AddressBok/Views/ContactInfo/Edit.cshtml
+++ b/DreamFactory.AddressBok/Views/ContactInfo/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DreamFactory.AddressBook.Models.ContactInfoViewModel
 
 @{
-    ViewBag.Title = "Edit '" + Model.ContactInfo.InfoType + "' contact info for " + ViewBag.ContactName;
+    ViewBag.Title = "Edit '" + Model.ContactInfo.InfoType + "' contact info for " + Model.ContactName;
 }
 
 <h2>@ViewBag.Title</h2>
