--- a/DreamFactory.AddressBok/Views/Contact/Edit.cshtml
+++ b/DreamFactory.AddressBok/Views/Contact/Edit.cshtml
@@ -16,6 +16,7 @@
         <section id="editForm">
             @using (Html.BeginForm("Edit", "Contact", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data", autocomplete = "off" }))
             {
+                @Html.HiddenFor(x => x.GroupId)
                 @Html.HiddenFor(x => x.Contact.Id)
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
